--- a/kepler/kepler_metrics.dash.yaml
+++ b/kepler/kepler_metrics.dash.yaml
@@ -1,47 +1,304 @@
-
+properties:
+  kepler_url: https://raw.githubusercontent.com/jesuino/dashbuilder-yaml-samples/main/kepler/metrics
+global:
+  mode: dark
+  settings:
+    extraConfiguration: >-
+      {
+        ".color": [
+          "#6f634b",
+          "#7a745d",
+          "#9a9381",
+          "#b2a59b",
+          "#cec0b8",
+          "#dec0bf"
+        ],
+        "title": {
+          "top": "auto",
+          "right": ""          
+        }
+      }
+    refresh:
+      interval: 1
+    chart:
+      resizable: true
+      height: 400
+      legend:
+        show: true
+      grid:
+        x: false
+    html:
+      html: >-
+        <div id="${this}" class="card-pf card-pf-aggregate-status" style="background-color: ${bgColor}; width: 90%; height: 80px;margin: 10px; border-radius: 10px">
+          <h2 style="font-weight: 600; font-size: large" id="${this}Value">${value} <span id="${this}Suffix" class=""></span></h2>
+          <p style="font-weight: 400" id="${this}Title"><em id="${this}Icon" class=""></em> ${title}</p>
+        </div>
+  dataset:
+    url: ${kepler_url}
+    .cacheEnabled: true
 datasets:
-  - uuid: pop
-    url: http://localhost:3001/kepler_metrics
-pages:
-  - components:
-      - settings:
-                    
-          lookup:
-            uuid: pop
+  - uuid: metrics
+  - uuid: joules_by_container
+    expression: >-
+      $ [$contains($[0], /kepler_container.*joules_total/) and $[2] != "0"].[
+        $replace($[1], /(.+)container_name="([0-9a-zA-Z-_]+)",(.+)/, "$2"),
+        $replace($[1], /(.+)pod_name="([0-9a-zA-Z-_]+)"/, "$2"),
+        $[0] = "kepler_container_joules_total" ? $[2] : "0",
+        $[0] = "kepler_container_core_joules_total" ? $[2] : "0",
+        $[0] = "kepler_container_dram_joules_total" ? $[2] : "0",
+        $[0] = "kepler_container_uncore_joules_total" ? $[2] : "0",
+        $[0] = "kepler_container_package_joules_total" ? $[2] : "0",
+        $[0] = "kepler_container_gpu_joules_total" ? $[2] : "0",
+        $[0] = "kepler_container_other_host_components_joules_total" ? $[2] : "0"
+      ]
+    columns:
+      - id: Container
+      - id: Pod
+      - id: Total
+        type: NUMBER
+      - id: Core
+        type: NUMBER
+      - id: DRAM
+        type: NUMBER
+      - id: Uncore
+        type: NUMBER
+      - id: Package
+        type: NUMBER
+      - id: Other Host
+        type: NUMBER
+      - id: GPU
+        type: NUMBER
+  - uuid: joules_by_node
+    expression: >-
+      $ [$contains($[0], /kepler_node.*joules_total/) and $[2] != "0"].[
+        $replace($[1], /instance="([0-9a-zA-Z-_]+)",(.+)/, "$1"),        
+        $[0] = "kepler_node_core_joules_total" ? $[2] : "0",
+        $[0] = "kepler_node_dram_joules_total" ? $[2] : "0",
+        $[0] = "kepler_node_uncore_joules_total" ? $[2] : "0",
+        $[0] = "kepler_node_package_joules_total" ? $[2] : "0",
+        $[0] = "kepler_node_gpu_joules_total" ? $[2] : "0",
+        $[0] = "kepler_node_other_host_components_joules_total" ? $[2] : "0",
+        $[2]
+        
+      ]
+    columns:
+      - id: Node
+      - id: Core
+        type: NUMBER
+      - id: DRAM
+        type: NUMBER
+      - id: Uncore
+        type: NUMBER
+      - id: Package
+        type: NUMBER
+      - id: Other Host
+        type: NUMBER
+      - id: GPU
+        type: NUMBER
+      - id: Value
+        type: NUMBER
+  - uuid: monitoring
+    accumulate: true
+    expression: >-
+      (
+        $now := $now() ~> $toMillis();
+        $[$[0] = "kepler_container_joules_total" and $[2] != "0"].[
+          $replace($[1], /(.+)container_namespace="([0-9a-zA-Z-_]+)",(.+)/, "$2"),
+          $replace($[1], /(.+)container_name="([0-9a-zA-Z-_]+)",(.+)/, "$2"),        
+          $[2],
+          $now
+        ]
+      )
+    columns:
+      - id: Namespace
+      - id: Container
+      - id: Total
+        type: NUMBER
+      - id: Timestamp
+        type: NUMBER
 
-      - settings:
+pages:
+  - name: index
+    properties:
+      margin: 10px
+    components:
+      - markdown: >-
+          # Kepler Metrics <hr />
+      - type: TABS
+        properties:
+          navGroupId: Metrics
+          targetDivId: Metrics_Div
+      - div: Metrics_Div
+  - name: Monitoring
+    rows:
+      - properties:
+          margin: 10px
+          margin-top: 30px
+        columns:
+          - components:
+              - settings:
+                  type: TIMESERIES
+                  filter:
+                    listening: true
+                  general:
+                    title: Joules by Container over time
+                  lookup:
+                    uuid: monitoring
+                    group:
+                      - functions:
+                          - source: Container
+                          - source: Timestamp
+                          - source: Total
+
+  - name: Joules by Node
+    properties:
+      margin: 20px
+    components:
+      - markdown: "### **Filter**"
+      - properties:
+          width: 160px
+        settings:
+          type: SELECTOR
+          filter:
+            notification: true
+          lookup:
+            uuid: joules_by_node
+            group:
+              - columnGroup:
+                  source: Node
+                functions:
+                  - source: Node
+      - properties:
+          margin-top: 30px
+        settings:
+          type: METRIC
+          general:
+            title: Total Joules by Node
+          filter:
+            listening: true
+          columns:
+            - id: Total
+              pattern: "###,###.000"
+          lookup:
+            uuid: joules_by_node
+            group:
+              - functions:
+                  - source: Value
+                    function: SUM
+      - properties:
+          margin-top: 80px
+        settings:
           type: BARCHART
           general:
-            title: kepler_container_core_joules_total
-            
+            title: Joules by Node
           chart:
-            resizable: true
-          columns:
-            - id: labels
-              expression: >-
-                    var i = value.indexOf('container_name=');
-                    var j = value.indexOf(',container_namespace=');
-                    value.substring(i, j).replace("container_name=", "")
-                                         .replaceAll("\"", "")
-                    
+            height: 400
+          filter:
+            listening: true
           lookup:
-            uuid: pop
-            sort:
-                - order: DESCENDING
-                  column: value
-            filter:
-                - column: metric
-                  function: EQUALS_TO
-                  args:
-                    - kepler_container_core_joules_total
-                - column: value
-                  function: GREATER_THAN
-                  args:
-                    - 0
+            uuid: joules_by_node
             group:
-                - columnGroup:
-                    source: labels
-                  functions:
-                    - source: labels
-                    - source: value
-                      function: SUM
+              - columnGroup:
+                  source: Node
+                functions:
+                  - source: Node
+                  - source: Package
+                    function: SUM
+                  - source: Core
+                    function: SUM
+                  - source: DRAM
+                    function: SUM
+                  - source: Uncore
+                    function: SUM
+                  - source: Other Host
+                    function: SUM
+                  - source: GPU
+                    function: SUM
+  - name: Joules by Container
+    properties:
+      margin: 20px
+    components:
+      - markdown: "### **Filter**"
+      - properties:
+          width: 160px
+        settings:
+          type: SELECTOR
+          filter:
+            notification: true
+          lookup:
+            uuid: joules_by_container
+            group:
+              - columnGroup:
+                  source: Container
+                functions:
+                  - source: Container
+      - properties:
+          width: 160px
+          margin-top: 10px
+        settings:
+          type: SELECTOR
+          filter:
+            notification: true
+            listening: true
+          lookup:
+            uuid: joules_by_container
+            group:
+              - columnGroup:
+                  source: Pod
+                functions:
+                  - source: Pod
+      - properties:
+          margin-top: 30px
+        settings:
+          type: METRIC
+          general:
+            title: Total Joules by Container
+          filter:
+            listening: true
+          columns:
+            - id: Total
+              pattern: "###,###.000"
+          lookup:
+            uuid: joules_by_container
+            group:
+              - functions:
+                  - source: Total
+                    function: SUM
+
+      - properties:
+          margin-top: 80px
+        settings:
+          type: BARCHART
+          general:
+            title: Joules by Container
+          chart:
+            height: 400
+          filter:
+            listening: true
+          lookup:
+            uuid: joules_by_container
+            group:
+              - columnGroup:
+                  source: Container
+                functions:
+                  - source: Container
+                  - source: Package
+                    function: SUM
+                  - source: Core
+                    function: SUM
+                  - source: DRAM
+                    function: SUM
+                  - source: Uncore
+                    function: SUM
+                  - source: Other Host
+                    function: SUM
+                  - source: GPU
+                    function: SUM
+navTree:
+  root_items:
+    - type: GROUP
+      id: Metrics
+      children:
+        - page: Joules by Node
+        - page: Joules by Container
+        - page: Monitoring
